lib/src/bindings_pi.dart


  int gpioHardwarePWM(
    int gpio,
    int PWMfreq,
    int PWMduty,
  ) {
    _gpioHardwarePWM ??=
        _dylib.lookupFunction<_c_gpioHardwarePWM, _dart_gpioHardwarePWM>(
            'gpioHardwarePWM');
    return _gpioHardwarePWM(
      gpio,
      PWMfreq,
      PWMduty,
    );
  }

  _dart_gpioHardwarePWM _gpioHardwarePWM;

  int gpioTime(
    int timetype,
    ffi.Pointer<ffi.Int32> seconds,
    ffi.Pointer<ffi.Int32> micros,
  ) {
    _gpioTime ??=
        _dylib.lookupFunction<_c_gpioTime, _dart_gpioTime>('gpioTime');
    return _gpioTime(
      timetype,
      seconds,
      micros,
    );
  }

  _dart_gpioTime _gpioTime;

  int gpioSleep(
    int timetype,
    int seconds,
    int micros,
  ) {
    _gpioSleep ??=
        _dylib.lookupFunction<_c_gpioSleep, _dart_gpioSleep>('gpioSleep');
    return _gpioSleep(
      timetype,
      seconds,
      micros,
    );
  }

  _dart_gpioSleep _gpioSleep;

  int gpioDelay(
    int micros,
  ) {
    _gpioDelay ??=
        _dylib.lookupFunction<_c_gpioDelay, _dart_gpioDelay>('gpioDelay');
    return _gpioDelay(
      micros,
    );
  }

  _dart_gpioDelay _gpioDelay;

  int gpioTick() {
    _gpioTick ??=
        _dylib.lookupFunction<_c_gpioTick, _dart_gpioTick>('gpioTick');
    return _gpioTick();
  }

  _dart_gpioTick _gpioTick;

  int gpioHardwareRevision() {
    _gpioHardwareRevision ??= _dylib.lookupFunction<_c_gpioHardwareRevision,
        _dart_gpioHardwareRevision>('gpioHardwareRevision');
    return _gpioHardwareRevision();
  }

  _dart_gpioHardwareRevision _gpioHardwareRevision;

  int gpioVersion() {
    _gpioVersion ??=
        _dylib.lookupFunction<_c_gpioVersion, _dart_gpioVersion>('gpioVersion');
    return _gpioVersion();
  }

  _dart_gpioVersion _gpioVersion;

  int gpioGetPad(
    int pad,
  ) {
    _gpioGetPad ??=
        _dylib.lookupFunction<_c_gpioGetPad, _dart_gpioGetPad>('gpioGetPad');
    return _gpioGetPad(
      pad,
    );
  }

  _dart_gpioGetPad _gpioGetPad;

  int gpioSetPad(
    int pad,
    int padStrength,
  ) {
    _gpioSetPad ??=
        _dylib.lookupFunction<_c_gpioSetPad, _dart_gpioSetPad>('gpioSetPad');
    return _gpioSetPad(
      pad,
      padStrength,
    );
  }

  _dart_gpioSetPad _gpioSetPad;

  int eventMonitor(
    int handle,
    int bits,
  ) {
    _eventMonitor ??= _dylib
        .lookupFunction<_c_eventMonitor, _dart_eventMonitor>('eventMonitor');
    return _eventMonitor(
      handle,
      bits,
    );
  }

  _dart_eventMonitor _eventMonitor;

  int eventSetFunc(
    int event,
    ffi.Pointer<ffi.NativeFunction<eventFunc_t>> f,
  ) {
    _eventSetFunc ??= _dylib
        .lookupFunction<_c_eventSetFunc, _dart_eventSetFunc>('eventSetFunc');
    return _eventSetFunc(
      event,
      f,
    );
  }

  _dart_eventSetFunc _eventSetFunc;

  int eventSetFuncEx(
    int event,
    ffi.Pointer<ffi.NativeFunction<eventFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _eventSetFuncEx ??=
        _dylib.lookupFunction<_c_eventSetFuncEx, _dart_eventSetFuncEx>(
            'eventSetFuncEx');
    return _eventSetFuncEx(
      event,
      f,
      userdata,
    );
  }

  _dart_eventSetFuncEx _eventSetFuncEx;

  int eventTrigger(
    int event,
  ) {
    _eventTrigger ??= _dylib
        .lookupFunction<_c_eventTrigger, _dart_eventTrigger>('eventTrigger');
    return _eventTrigger(
      event,
    );
  }

  _dart_eventTrigger _eventTrigger;

  int fileClose(
    int handle,
  ) {
    _fileClose ??=
        _dylib.lookupFunction<_c_fileClose, _dart_fileClose>('fileClose');
    return _fileClose(
      handle,
    );
  }

  _dart_fileClose _fileClose;

  int fileSeek(
    int handle,
    int seekOffset,
    int seekFrom,
  ) {
    _fileSeek ??=
        _dylib.lookupFunction<_c_fileSeek, _dart_fileSeek>('fileSeek');
    return _fileSeek(
      handle,
      seekOffset,
      seekFrom,
    );
  }

  _dart_fileSeek _fileSeek;

  int gpioCfgBufferSize(
    int cfgMillis,
  ) {
    _gpioCfgBufferSize ??=
        _dylib.lookupFunction<_c_gpioCfgBufferSize, _dart_gpioCfgBufferSize>(
            'gpioCfgBufferSize');
    return _gpioCfgBufferSize(
      cfgMillis,
    );
  }

  _dart_gpioCfgBufferSize _gpioCfgBufferSize;

  int gpioCfgClock(
    int cfgMicros,
    int cfgPeripheral,
    int cfgSource,
  ) {
    _gpioCfgClock ??= _dylib
        .lookupFunction<_c_gpioCfgClock, _dart_gpioCfgClock>('gpioCfgClock');
    return _gpioCfgClock(
      cfgMicros,
      cfgPeripheral,
      cfgSource,
    );
  }

  _dart_gpioCfgClock _gpioCfgClock;

  int gpioCfgDMAchannel(
    int DMAchannel,
  ) {
    _gpioCfgDMAchannel ??=
        _dylib.lookupFunction<_c_gpioCfgDMAchannel, _dart_gpioCfgDMAchannel>(
            'gpioCfgDMAchannel');
    return _gpioCfgDMAchannel(
      DMAchannel,
    );
  }

  _dart_gpioCfgDMAchannel _gpioCfgDMAchannel;

  int gpioCfgDMAchannels(
    int primaryChannel,
    int secondaryChannel,
  ) {
    _gpioCfgDMAchannels ??=
        _dylib.lookupFunction<_c_gpioCfgDMAchannels, _dart_gpioCfgDMAchannels>(
            'gpioCfgDMAchannels');
    return _gpioCfgDMAchannels(
      primaryChannel,
      secondaryChannel,
    );
  }

  _dart_gpioCfgDMAchannels _gpioCfgDMAchannels;

  int gpioCfgPermissions(
    int updateMask,
  ) {
    _gpioCfgPermissions ??=
        _dylib.lookupFunction<_c_gpioCfgPermissions, _dart_gpioCfgPermissions>(
            'gpioCfgPermissions');
    return _gpioCfgPermissions(
      updateMask,
    );
  }

  _dart_gpioCfgPermissions _gpioCfgPermissions;

  int gpioCfgSocketPort(
    int port,
  ) {
    _gpioCfgSocketPort ??=
        _dylib.lookupFunction<_c_gpioCfgSocketPort, _dart_gpioCfgSocketPort>(
            'gpioCfgSocketPort');
    return _gpioCfgSocketPort(
      port,
    );
  }

  _dart_gpioCfgSocketPort _gpioCfgSocketPort;

  int gpioCfgInterfaces(
    int ifFlags,
  ) {
    _gpioCfgInterfaces ??=
        _dylib.lookupFunction<_c_gpioCfgInterfaces, _dart_gpioCfgInterfaces>(
            'gpioCfgInterfaces');
    return _gpioCfgInterfaces(
      ifFlags,
    );
  }

  _dart_gpioCfgInterfaces _gpioCfgInterfaces;

  int gpioCfgMemAlloc(
    int memAllocMode,
  ) {
    _gpioCfgMemAlloc ??=
        _dylib.lookupFunction<_c_gpioCfgMemAlloc, _dart_gpioCfgMemAlloc>(
            'gpioCfgMemAlloc');
    return _gpioCfgMemAlloc(
      memAllocMode,
    );
  }

  _dart_gpioCfgMemAlloc _gpioCfgMemAlloc;

  int gpioCfgNetAddr(
    int numSockAddr,
    ffi.Pointer<ffi.Uint32> sockAddr,
  ) {
    _gpioCfgNetAddr ??=
        _dylib.lookupFunction<_c_gpioCfgNetAddr, _dart_gpioCfgNetAddr>(
            'gpioCfgNetAddr');
    return _gpioCfgNetAddr(
      numSockAddr,
      sockAddr,
    );
  }

  _dart_gpioCfgNetAddr _gpioCfgNetAddr;

  int gpioCfgGetInternals() {
    _gpioCfgGetInternals ??= _dylib.lookupFunction<_c_gpioCfgGetInternals,
        _dart_gpioCfgGetInternals>('gpioCfgGetInternals');
    return _gpioCfgGetInternals();
  }

  _dart_gpioCfgGetInternals _gpioCfgGetInternals;

  int gpioCfgSetInternals(
    int cfgVal,
  ) {
    _gpioCfgSetInternals ??= _dylib.lookupFunction<_c_gpioCfgSetInternals,
        _dart_gpioCfgSetInternals>('gpioCfgSetInternals');
    return _gpioCfgSetInternals(
      cfgVal,
    );
  }

  _dart_gpioCfgSetInternals _gpioCfgSetInternals;

  int rawWaveAddGeneric(
    int numPulses,
    ffi.Pointer<rawWave_t> pulses,
  ) {
    _rawWaveAddGeneric ??=
        _dylib.lookupFunction<_c_rawWaveAddGeneric, _dart_rawWaveAddGeneric>(
            'rawWaveAddGeneric');
    return _rawWaveAddGeneric(
      numPulses,
      pulses,
    );
  }

  _dart_rawWaveAddGeneric _rawWaveAddGeneric;

  int rawWaveCB() {
    _rawWaveCB ??=
        _dylib.lookupFunction<_c_rawWaveCB, _dart_rawWaveCB>('rawWaveCB');
    return _rawWaveCB();
  }

  _dart_rawWaveCB _rawWaveCB;

  ffi.Pointer<rawCbs_t> rawWaveCBAdr(
    int cbNum,
  ) {
    _rawWaveCBAdr ??= _dylib
        .lookupFunction<_c_rawWaveCBAdr, _dart_rawWaveCBAdr>('rawWaveCBAdr');
    return _rawWaveCBAdr(
      cbNum,
    );
  }

  _dart_rawWaveCBAdr _rawWaveCBAdr;

  int rawWaveGetOOL(
    int pos,
  ) {
    _rawWaveGetOOL ??= _dylib
        .lookupFunction<_c_rawWaveGetOOL, _dart_rawWaveGetOOL>('rawWaveGetOOL');
    return _rawWaveGetOOL(
      pos,
    );
  }

  _dart_rawWaveGetOOL _rawWaveGetOOL;

  void rawWaveSetOOL(
    int pos,
    int lVal,
  ) {
    _rawWaveSetOOL ??= _dylib
        .lookupFunction<_c_rawWaveSetOOL, _dart_rawWaveSetOOL>('rawWaveSetOOL');
    return _rawWaveSetOOL(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetOOL _rawWaveSetOOL;

  int rawWaveGetOut(
    int pos,
  ) {
    _rawWaveGetOut ??= _dylib
        .lookupFunction<_c_rawWaveGetOut, _dart_rawWaveGetOut>('rawWaveGetOut');
    return _rawWaveGetOut(
      pos,
    );
  }

  _dart_rawWaveGetOut _rawWaveGetOut;

  void rawWaveSetOut(
    int pos,
    int lVal,
  ) {
    _rawWaveSetOut ??= _dylib
        .lookupFunction<_c_rawWaveSetOut, _dart_rawWaveSetOut>('rawWaveSetOut');
    return _rawWaveSetOut(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetOut _rawWaveSetOut;

  int rawWaveGetIn(
    int pos,
  ) {
    _rawWaveGetIn ??= _dylib
        .lookupFunction<_c_rawWaveGetIn, _dart_rawWaveGetIn>('rawWaveGetIn');
    return _rawWaveGetIn(
      pos,
    );
  }

  _dart_rawWaveGetIn _rawWaveGetIn;

  void rawWaveSetIn(
    int pos,
    int lVal,
  ) {
    _rawWaveSetIn ??= _dylib
        .lookupFunction<_c_rawWaveSetIn, _dart_rawWaveSetIn>('rawWaveSetIn');
    return _rawWaveSetIn(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetIn _rawWaveSetIn;

  double time_time() {
    _time_time ??=
        _dylib.lookupFunction<_c_time_time, _dart_time_time>('time_time');
    return _time_time();
  }

  _dart_time_time _time_time;

  void time_sleep(
    double seconds,
  ) {
    _time_sleep ??=
        _dylib.lookupFunction<_c_time_sleep, _dart_time_sleep>('time_sleep');
    return _time_sleep(
      seconds,
    );
  }

  _dart_time_sleep _time_sleep;

  void rawDumpWave() {
    _rawDumpWave ??=
        _dylib.lookupFunction<_c_rawDumpWave, _dart_rawDumpWave>('rawDumpWave');
    return _rawDumpWave();
  }

  _dart_rawDumpWave _rawDumpWave;

  void rawDumpScript(
    int script_id,
  ) {
    _rawDumpScript ??= _dylib
        .lookupFunction<_c_rawDumpScript, _dart_rawDumpScript>('rawDumpScript');
    return _rawDumpScript(
      script_id,
    );
  }

  _dart_rawDumpScript _rawDumpScript;
}

class __fsid_t extends ffi.Struct {}

class timespec extends ffi.Struct {
  @ffi.Int64()
  int tv_sec;

  @ffi.Int64()
  int tv_nsec;
}

class sched_param extends ffi.Struct {
  @ffi.Int32()
  int sched_priority;
}

class cpu_set_t extends ffi.Struct {}

class tm extends ffi.Struct {}

class itimerspec extends ffi.Struct {}

class sigevent extends ffi.Struct {}

class __locale_data extends ffi.Struct {}

class __locale_struct extends ffi.Struct {}

class __pthread_list_t extends ffi.Struct {
  ffi.Pointer<__pthread_list_t> __prev;

  ffi.Pointer<__pthread_list_t> __next;
}

class __pthread_slist_t extends ffi.Struct {
  ffi.Pointer<__pthread_slist_t> __next;
}

class __pthread_mutex_s extends ffi.Struct {}

class __pthread_rwlock_arch_t extends ffi.Struct {
  @ffi.Uint32()
  int __readers;

  @ffi.Uint32()
  int __writers;

  @ffi.Uint32()
  int __wrphase_futex;

  @ffi.Uint32()
  int __writers_futex;

  @ffi.Uint32()
  int __pad3;

  @ffi.Uint32()
  int __pad4;

  @ffi.Int32()
  int __cur_writer;

  @ffi.Int32()
  int __shared;

  @ffi.Uint64()
  int __pad1;

  @ffi.Uint64()
  int __pad2;

  @ffi.Uint32()
  int __flags;
}

class __pthread_cond_s extends ffi.Struct {}

class __once_flag extends ffi.Struct {
  @ffi.Int32()
  int __data;
}

class __sigset_t extends ffi.Struct {}

class _pthread_cleanup_buffer extends ffi.Struct {
  ffi.Pointer<ffi.NativeFunction<_typedefC_1>> __routine;

  ffi.Pointer<ffi.Void> __arg;

  @ffi.Int32()
  int __canceltype;

  ffi.Pointer<_pthread_cleanup_buffer> __prev;
}

class __pthread_unwind_buf_t extends ffi.Struct {}
